pod-security/subrule/restricted/restricted-exclude-seccomp/.kyverno-test/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  securityContext:
    seccompProfile:
      type: Unconfined
  containers:
    - name: container01
      image: busybox:1.28
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        capabilities:
          drop:
            - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  securityContext:
    seccompProfile:
      type: Unconfined
  containers:
    - name: container01
      image: busybox:1.28
      securityContext:
        allowPrivilegeEscalation: false
        # runAsNonRoot: true
        capabilities:
          drop:
            - ALL
