pod-security/subrule/restricted/restricted-exclude-seccomp/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: podsecurity-subrule-restricted-seccomp
policies:
  - ../restricted-exclude-seccomp.yaml
resources:
  - resource.yaml
results:
  - kind: Pod
    policy: podsecurity-subrule-restricted-seccomp
    resources:
      - badpod01
    result: fail
    rule: restricted-exempt-seccomp
  - kind: Pod
    policy: podsecurity-subrule-restricted-seccomp
    resources:
      - goodpod01
    result: pass
    rule: restricted-exempt-seccomp
